// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section Divider should render successfully - no children 1`] = `
<body>
  <div>
    <div
      aria-label="Text divider"
    >
      <hr
        class=" border-black border-1 m-0 my-2"
      />
    </div>
  </div>
</body>
`;

exports[`Section Divider should render successfully - with children 1`] = `
<body>
  <div>
    <div
      aria-label="Text divider"
    >
      <div
        class="flex flex-row gap-x-2 items-center my-2"
      >
        <hr
          class="flex flex-auto border-black border-1 m-0 box-border my-auto"
        />
        <h5
          class="flex flex-shrink justify-center font-bold text-base uppercase"
        >
          App
        </h5>
        <hr
          class="flex flex-auto border-black border-1 m-0 box-border my-auto"
        />
      </div>
    </div>
  </div>
</body>
`;
